Update MFQ.java